// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test entreprise search correct siren 1`] = `
Object {
  "activitePrincipale": "Fabrication d'articles en fils métalliques, de chaînes et de ressorts",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
    Object {
      "idcc": 9999,
      "shortTitle": "",
    },
  ],
  "etablissements": 36,
  "highlightLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 26,
  "matchingEtablissement": Object {
    "address": "Rue du Xay 88190 Golbey",
    "siret": "85520050700108",
  },
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
}
`;

exports[`Test etablissement search correct siret 1`] = `
Object {
  "activitePrincipale": "Fabrication d'articles en fils métalliques, de chaînes et de ressorts",
  "address": "Rue du Xay 88190 Golbey",
  "convention": Object {
    "etat": "VIGUEUR_ETEN",
    "id": "KALICONT000005635597",
    "idcc": 45,
    "mtime": 1562873918,
    "shortTitle": "Caoutchouc",
    "texte_de_base": "KALITEXT000005673838",
    "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
    "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
  },
  "etablissements": 36,
  "highlightLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 1,
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
  "siret": "85520050700108",
}
`;

exports[`Test search generic search 1`] = `
Object {
  "activitePrincipale": "Fabrication d'articles en fils métalliques, de chaînes et de ressorts",
  "conventions": Array [
    Object {
      "etat": "VIGUEUR_ETEN",
      "id": "KALICONT000005635597",
      "idcc": 45,
      "mtime": 1562873918,
      "shortTitle": "Caoutchouc",
      "texte_de_base": "KALITEXT000005673838",
      "title": "Convention collective nationale du caoutchouc du 6 mars 1953. Étendue par arrêté du 29 mai 1969 JORF 18 juin 1969 ",
      "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635597",
    },
  ],
  "etablissements": 36,
  "highlightLabel": "MANUF FRANC PNEUMATIQ <b><u>MICHELIN</b></u>",
  "label": "MANUF FRANC PNEUMATIQ MICHELIN",
  "matching": 14,
  "matchingEtablissement": Object {
    "address": "Rue du Xay 88190 Golbey",
    "siret": "85520050700108",
  },
  "simpleLabel": "MANUF FRANC PNEUMATIQ MICHELIN",
  "siren": "855200507",
}
`;
